<resources>
    <string name="app_name">Pitcrew</string>
    <string name="waiting_title">Waiting for session…</string>
    <string name="waiting_hint">Open PitStopper and scan the QR code with your camera app</string>
    <string name="name_prompt">Enter your crew name</string>
    <string name="name_hint">e.g. pitcrew-1</string>
    <string name="name_confirm">Join</string>
    <string name="send">Send</string>
    <string name="message_hint">Type a message…</string>
    <string name="notification_channel">Pitcrew connection</string>
    <string name="notification_connected">Connected to session</string>
    <string name="notification_connecting">Connecting…</string>
    <string name="notification_disconnected">Disconnected</string>
</resources>